--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
-    <title>Hello Electron React!</title>
+    <title>Bush Launcher</title>
   </head>
   <body>
     <div id="root"></div>
