--- a/src/renderer/components/main/css/LaunchButton.module.css
+++ b/src/renderer/components/main/css/LaunchButton.module.css
@@ -1,175 +1,218 @@
 .LaunchButton {
-    width: 340px;
-    height: 80px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
-    border-radius: 20px;
-    background: #1e954e;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(4px);
-    cursor: pointer;
-    transition: all 0.5s;
+  min-width: 300px;
+  height: 12vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1px;
+  border-radius: 20px;
+  background: #1e954e;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4px);
+  cursor: pointer;
+  transition: all 0.5s;
+  padding: 10px 1vw 10px 1vw;
   --bg-offline: linear-gradient(
     159deg,
     rgb(222, 222, 222) 0%,
     rgb(159, 169, 197) 100%
   );
-    --bg-normal: linear-gradient(
-            124deg,
-            rgba(21, 230, 99, 1) 0%,
-            rgba(20, 218, 171, 1) 62%
-    );
-    --bg-loading: linear-gradient(
-            159deg,
-            rgb(21, 156, 247) 0%,
-            rgb(10, 87, 210) 100%
-    );
+  --bg-normal: linear-gradient(
+    124deg,
+    rgba(21, 230, 99, 1) 0%,
+    rgba(20, 218, 171, 1) 62%
+  );
+  --bg-loading: linear-gradient(
+    159deg,
+    rgb(21, 156, 247) 0%,
+    rgb(10, 87, 210) 100%
+  );
 
-    --bg-launched: linear-gradient(
-            159deg,
-            rgb(34, 255, 82) 0%,
-            rgba(76, 175, 80, 1) 100%
-    );
-    --bg-error: linear-gradient(159deg, rgb(255, 60, 0) 0%, rgb(170, 0, 59) 100%);
+  --bg-launched: linear-gradient(
+    159deg,
+    rgb(34, 255, 82) 0%,
+    rgba(76, 175, 80, 1) 100%
+  );
+  --bg-error: linear-gradient(159deg, rgb(255, 60, 0) 0%, rgb(170, 0, 59) 100%);
 }
 
 .LaunchButton::before {
-    content: '';
-    display: block;
-    width: 30vw;
-    height: 13vh;
-    background: var(--bg-normal);
-    filter: blur(20px);
-    opacity: 0.4;
-    transition: opacity 0.3s, all 0.5s;
-    border-radius: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: scale(1.2);
+  content: '';
+  display: block;
+  width: 30vw;
+  height: 13vh;
+  background: var(--bg-normal);
+  filter: blur(20px);
+  opacity: 0.4;
+  transition: opacity 0.3s, all 0.5s;
+  border-radius: 20px;
+  position: absolute;
+  z-index: -1;
+  transform: scale(1.2);
 }
 
 .LaunchButton.offlineStyle::before {
   background: var(--bg-offline);
 }
+
 .LaunchButton.offlineStyle {
   background-color: gray;
 }
+.LaunchButton.Loading {
+  background: var(--bg-loading);
+  height: fit-content;
+  gap: 0;
+}
+
+.LaunchButton.Loading::before {
+  background: var(--bg-loading);
+}
+.LaunchButton.Error {
+  background: var(--bg-error);
+}
+
+.LaunchButton.Error::before {
+  background: var(--bg-error);
+}
 
 .LaunchButton:hover,
-.LaunchButton[data-version-selector='true'][data-version-selector-opened='true']{
-    transform: scale(1.1);
+.LaunchButton[data-version-selector='true'][data-version-selector-opened='true'],
+.LaunchButton.Loading,
+.LaunchButton.Error{
+  transform: scale(1.1);
 }
-
 .LaunchButton .Content {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    gap: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 100%;
+}
+.LaunchButton .runContent {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  gap: 15px;
 
-    width: 100%;
-    height: 100%;
+  height: 100%;
 
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 1;
-    /*background-color: red;*/
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 1;
+  /*background-color: red;*/
 }
 
-.LaunchButton .Content .text {
-    width: auto;
-    height: 100%;
+.LaunchButton .runContent .text {
+  width: auto;
+  height: 100%;
 
-    font-family: SquareFont, serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 54px;
-    line-height: 74px;
+  font-family: SquareFont, serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 74px;
 
-    display: flex;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
 
 
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    /*background-color: violet;*/
-    transition: all 0.3s ease-in-out;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  /*background-color: violet;*/
+  transition: all 0.3s ease-in-out;
 }
 
-.LaunchButton .Content .icon {
-    width: 3vw;
-    height: 100%;
-    transform: scale(2);
-    transition: all 0.3s ease-in-out;
-    /*background-color: blue;*/
+.LaunchButton .runContent .icon {
+  width: 3vw;
+  height: 100%;
+  transform: scale(2);
+  transition: all 0.3s ease-in-out;
+  /*background-color: blue;*/
 }
+.LaunchButton.Loading .runContent .icon,
+.LaunchButton.Error .runContent .icon{
+  transform: scale(1);
+}
+
 
 /************************/
-.LaunchButton[data-version-selector='true'] {
-    gap: 4px;
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .Content {
+  gap: 4px;
 }
 
 .LaunchButton[data-version-selector='true'] .line {
-    height: calc(100% + 20px);
-    /*prevent button padding*/
+  height: calc(100% + 20px);
+  /*prevent button padding*/
 
-    width: 4px;
-    border-radius: 0;
+  width: 4px !important;
+  border-radius: 0;
 
 }
 
-.LaunchButton[data-version-selector='true'] .Content {
-    width: 50%;
-    gap: 6px;
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-    z-index: 0;
-    transition: all 0.3s ease-in-out;
+.LaunchButton[data-version-selector='true'] .runContent {
+  /*width: 50%;*/
+  gap: 6px;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+  z-index: 0;
+  transition: all 0.3s ease-in-out;
 }
 
-
-.LaunchButton[data-version-selector='true'] .Content:hover .icon {
-    transform: scale(2);
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent:hover {
+  /*width: 65%;*/
+}
+.LaunchButton.Loading .runContent,
+.LaunchButton.Error .runContent{
+  /*width: 70%;*/
 }
 
-.LaunchButton[data-version-selector='true'] .Content:hover .text {
-    font-size: 45px;
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent:hover .icon{
+  transform: scale(2);
 }
 
-.LaunchButton[data-version-selector='true'] .Content:hover {
-    width: 65%;
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent:hover .text{
+  font-size: 45px;
+}
+.LaunchButton.Loading .runContent .text,
+.LaunchButton.Error .runContent .text{
+  font-size: 40px;
 }
 
-.LaunchButton[data-version-selector='true'] .Content:hover + .versionSelectorLoader {
-    width: 30%;
+.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader,
+.LaunchButton.Loading .runContent + .versionSelectorLoader,
+.LaunchButton.Error .runContent + .versionSelectorLoader{
+  /*width: 20%;*/
 }
 
-.LaunchButton[data-version-selector='true'] .Content:hover + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon {
-    width: 0;
+.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon,
+.LaunchButton.Loading .runContent + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon,
+.LaunchButton.Error .runContent + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon{
+  width: 0;
 }
 
-.LaunchButton[data-version-selector='true'] .Content:hover + .versionSelectorLoader .versionSelector .dataContainer {
-    gap: 0;
+.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader .versionSelector .dataContainer,
+.LaunchButton.Loading .runContent + .versionSelectorLoader .versionSelector .dataContainer,
+.LaunchButton.Error .runContent + .versionSelectorLoader .versionSelector .dataContainer{
+  gap: 0;
 }
 
-.LaunchButton[data-version-selector='true'] .Content .text {
-    font-size: 40px;
-    line-height: 52px;
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent .text {
+  font-size: 40px;
+  line-height: 52px;
 }
 
-.LaunchButton[data-version-selector='true'] .Content .icon {
-    transform: scale(1.4);
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent .icon {
+  transform: scale(1.4);
 }
+
 .LaunchButton[data-version-selector='true'] .versionSelectorLoader {
   display: flex;
   flex-direction: column;
@@ -181,6 +224,7 @@
   /*background-color: orange;*/
   transition: 0.3s ease-in-out;
 }
+
 .LaunchButton[data-version-selector='true'] .versionSelector {
   display: flex;
   flex-direction: column;
@@ -199,48 +243,48 @@
 }
 
 .LaunchButton[data-version-selector='true'] .versionSelector .dataContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    box-sizing: border-box;
-    gap: 17px;
-    width: 100%;
-    height: 100%;
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-    transition: all 0.5s ease-in-out;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
+  gap: 17px;
+  width: 100%;
+  height: 100%;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  transition: all 0.5s ease-in-out;
 }
 
 .LaunchButton[data-version-selector='true'] .versionSelector .dataContainer .dropdownIcon {
-    width: 2vw;
-    height: 100%;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    transform: scale(1.3);
-    transition: all 0.3s ease-in-out;
+  width: 2vw;
+  height: 100%;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  transform: scale(1.3);
+  transition: all 0.3s ease-in-out;
 }
 
 .LaunchButton[data-version-selector='true'] .versionSelector .dataContainer:hover .dropdownIcon,
-.LaunchButton[data-version-selector='true'][data-version-selector-opened='true'] .versionSelector .dataContainer .dropdownIcon{
-    transform: scale(1.3) translateY(3px);
+.LaunchButton[data-version-selector='true'][data-version-selector-opened='true'] .versionSelector .dataContainer .dropdownIcon {
+  transform: scale(1.3) translateY(3px);
 }
 
 .LaunchButton[data-version-selector='true'] .versionSelector .dataContainer .versionText {
-    width: fit-content;
-    font-family: SquareFont, serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 46px;
-    flex: none;
-    order: 1;
-    flex-grow: 1;
-    text-align: center;
+  width: fit-content;
+  font-family: SquareFont, serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 46px;
+  flex: none;
+  order: 1;
+  flex-grow: 1;
+  text-align: center;
 }
 
 /****************************/
@@ -280,14 +324,28 @@
   height: auto;
 }
 
-.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown .version{
+.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown .version {
   margin: 1vh 0 1vh 0;
 }
-.LaunchButton[data-version-selector='true'].offlineStyle .versionSelector .versionListDropdown .version.versionSelected{
+
+.LaunchButton[data-version-selector='true'].offlineStyle .versionSelector .versionListDropdown .version.versionSelected {
   background: gray;
 }
 
+.LaunchButton:not(.Loading) .LoadingContent {
+  height: 0;
+  overflow: hidden;
+}
 
-
-
+.LaunchButton.Loading .LoadingContent {
+  width: 100%;
+  height: 3vh;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  gap: 5px;
+}
+.LaunchButton.Loading .LoadingContent .ProgressBar {
+  flex: 2;
+}
 
