--- a/src/renderer/components/public/css/publicStyle.module.css
+++ b/src/renderer/components/public/css/publicStyle.module.css
@@ -5,6 +5,7 @@
   width: 100px;
   height: 100px;
 }
+
 /**********************************/
 
 
@@ -36,6 +37,7 @@
   width: 100%;
   height: 100%;
 }
+
 .Loader {
   width: 100%;
   height: 10vh;
@@ -67,12 +69,15 @@
   align-self: stretch;
   flex-grow: 0;
 }
+
 .Version.versionInstalled:hover:not(.versionSelected) {
   background-color: var(--hover-background-color);
 }
+
 .Version.versionToDownload:hover:not(.versionSelected) {
   background-color: var(--hover-background-color);
 }
+
 .Version.versionSelected {
   background-color: var(--valid);
 }
@@ -107,3 +112,31 @@
   width: 10vw;
   height: 10vw;
 }
+
+/************************************/
+.CallbackMessage .arrow {
+  position: absolute;
+  top: 0.5vh;
+  right: 2vw;
+  width: 2.5vw;
+  height: 2.5vw;
+}
+
+.CallbackMessage .message {
+  font-size: 4.5vh;
+  font-weight: 400;
+}
+
+.CallbackMessage .description {
+  font-size: 3.5vh;
+  font-family: Octosquares;
+}
+
+.CallbackMessage .resolutions {
+  font-size: 3.5vh;
+  color: var(--valid);
+  font-family: Octosquares;
+}
+
+
+/*****************************************/
