--- a/src/renderer/components/views/SettingsViews/css/DefaultSettingsView.module.css
+++ b/src/renderer/components/views/SettingsViews/css/DefaultSettingsView.module.css
@@ -7,3 +7,24 @@
   justify-content: center;
   gap: 2vh;
 }
+
+h1 {
+  font-size: 6vw;
+}
+
+h2 {
+  font-size: 5vw;
+}
+
+h3 {
+  font-size: 4vw;
+}
+
+h4 {
+  font-size: 3vw;
+}
+
+h5 {
+  font-size: 2vw;
+}
+
