--- a/src/renderer/components/main/css/LaunchButton.module.css
+++ b/src/renderer/components/main/css/LaunchButton.module.css
@@ -1,351 +1,294 @@
 .LaunchButton {
-  min-width: 300px;
-  height: 12vh;
+  align-items: center;
+  backdrop-filter: blur(4px);
+  background: #1e954e;
+  border-radius: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1px;
-  border-radius: 20px;
-  background: #1e954e;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4px);
-  cursor: pointer;
-  transition: all 0.5s;
-  padding: 10px 1vw 10px 1vw;
-  --bg-offline: linear-gradient(
-    159deg,
-    rgb(222, 222, 222) 0%,
-    rgb(159, 169, 197) 100%
-  );
-  --bg-normal: linear-gradient(
-    124deg,
-    rgba(21, 230, 99, 1) 0%,
-    rgba(20, 218, 171, 1) 62%
-  );
-  --bg-loading: linear-gradient(
-    159deg,
-    rgb(21, 156, 247) 0%,
-    rgb(10, 87, 210) 100%
-  );
-
-  --bg-launched: linear-gradient(
-    159deg,
-    rgb(34, 255, 82) 0%,
-    rgba(76, 175, 80, 1) 100%
-  );
-  --bg-error: linear-gradient(159deg, rgb(255, 60, 0) 0%, rgb(170, 0, 59) 100%);
+  height: 12vh;
+  min-width: 300px;
+  padding: 10px 1vw;
+  transition: all .5s;
+  --bg-error: linear-gradient(159deg, #ff3c00 0%, #aa003b 100%);
+  --bg-launched: linear-gradient(159deg, #22ff52 0%, rgba(76, 175, 80, 1) 100%);
+  --bg-loading: linear-gradient(159deg, #159cf7 0%, #0a57d2 100%);
+  --bg-normal: linear-gradient(124deg, rgba(21, 230, 99, 1) 0%, rgba(20, 218, 171, 1) 62%);
+  --bg-offline: linear-gradient(159deg, #dedede 0%, #9fa9c5 100%)
 }
 
-.LaunchButton::before {
-  content: '';
-  display: block;
-  width: 30vw;
-  height: 13vh;
-  background: var(--bg-normal);
-  filter: blur(20px);
-  opacity: 0.4;
-  transition: opacity 0.3s, all 0.5s;
-  border-radius: 20px;
-  position: absolute;
-  z-index: -1;
-  transform: scale(1.2);
-}
-
-.LaunchButton.offlineStyle::before {
-  background: var(--bg-offline);
-}
-
-.LaunchButton.offlineStyle {
-  background-color: gray;
-}
-.LaunchButton.Loading {
-  background: var(--bg-loading);
-  height: fit-content;
-  gap: 0;
-}
-
-.LaunchButton.Loading::before {
-  background: var(--bg-loading);
-}
-.LaunchButton.Error {
-  background: var(--bg-error);
-}
-
-.LaunchButton.Error::before {
-  background: var(--bg-error);
-}
-
-.LaunchButton:hover,
-.LaunchButton[data-version-selector='true'][data-version-selector-opened='true'],
-.LaunchButton.Loading,
-.LaunchButton.Error{
-  transform: scale(1.1);
-}
 .LaunchButton .Content {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
   gap: 10px;
   height: 100%;
-}
-.LaunchButton .runContent {
-  display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  padding: 0;
-  gap: 15px;
-
-  height: 100%;
-
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 1;
-  /*background-color: red;*/
+  min-width: 100%
 }
 
-.LaunchButton .runContent .text {
-  width: auto;
-  height: 100%;
-
-  font-family: SquareFont, serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 54px;
-  line-height: 74px;
-
-  display: flex;
+.LaunchButton .runContent {
   align-items: center;
-  text-align: center;
-
-
+  align-self: stretch;
+  display: flex;
   flex: none;
-  order: 1;
-  flex-grow: 0;
-  /*background-color: violet;*/
-  transition: all 0.3s ease-in-out;
+  flex-direction: row;
+  flex-grow: 1;
+  gap: 15px;
+  height: 100%;
+  justify-content: center;
+  order: 0;
+  padding: 0
 }
 
 .LaunchButton .runContent .icon {
-  width: 3vw;
   height: 100%;
   transform: scale(2);
-  transition: all 0.3s ease-in-out;
-  /*background-color: blue;*/
-}
-.LaunchButton.Loading .runContent .icon,
-.LaunchButton.Error .runContent .icon{
-  transform: scale(1);
+  transition: all .3s ease-in-out;
+  width: 3vw
 }
 
-
-/************************/
-.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .Content {
-  gap: 4px;
-}
-
-.LaunchButton[data-version-selector='true'] .line {
-  height: calc(100% + 20px);
-  /*prevent button padding*/
-
-  width: 4px !important;
-  border-radius: 0;
-
-}
-
-.LaunchButton[data-version-selector='true'] .runContent {
-  /*width: 50%;*/
-  gap: 6px;
-  flex: none;
-  order: 1;
-  align-self: stretch;
-  flex-grow: 0;
-  z-index: 0;
-  transition: all 0.3s ease-in-out;
-}
-
-.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent:hover {
-  /*width: 65%;*/
-}
-.LaunchButton.Loading .runContent,
-.LaunchButton.Error .runContent{
-  /*width: 70%;*/
-}
-
-.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent:hover .icon{
-  transform: scale(2);
-}
-
-.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent:hover .text{
-  font-size: 45px;
-}
-.LaunchButton.Loading .runContent .text,
-.LaunchButton.Error .runContent .text{
-  font-size: 40px;
-}
-
-.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader,
-.LaunchButton.Loading .runContent + .versionSelectorLoader,
-.LaunchButton.Error .runContent + .versionSelectorLoader{
-  /*width: 20%;*/
-}
-
-.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon,
-.LaunchButton.Loading .runContent + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon,
-.LaunchButton.Error .runContent + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon{
-  width: 0;
-}
-
-.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader .versionSelector .dataContainer,
-.LaunchButton.Loading .runContent + .versionSelectorLoader .versionSelector .dataContainer,
-.LaunchButton.Error .runContent + .versionSelectorLoader .versionSelector .dataContainer{
-  gap: 0;
-}
-
-.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent .text {
-  font-size: 40px;
-  line-height: 52px;
-}
-
-.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error) .runContent .icon {
-  transform: scale(1.4);
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelectorLoader {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 0;
-  width: 40%;
-  height: 100%;
-  /*background-color: orange;*/
-  transition: 0.3s ease-in-out;
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelector {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0;
-  gap: 10px;
-  isolation: isolate;
-  width: 100%;
-  height: 100%;
-  flex: none;
-  order: -1;
-  align-self: stretch;
-  flex-grow: 0;
-  /*background-color: orange;*/
-  transition: 0.3s ease-in-out;
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.LaunchButton .runContent .text {
   align-items: center;
-  padding: 10px;
-  box-sizing: border-box;
-  gap: 17px;
-  width: 100%;
-  height: 100%;
+  display: flex;
   flex: none;
-  order: 0;
-  align-self: stretch;
   flex-grow: 0;
-  transition: all 0.5s ease-in-out;
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer .dropdownIcon {
-  width: 2vw;
+  font: 400 54px/74px SquareFont, serif;
   height: 100%;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  transform: scale(1.3);
-  transition: all 0.3s ease-in-out;
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer:hover .dropdownIcon,
-.LaunchButton[data-version-selector='true'][data-version-selector-opened='true'] .versionSelector .dataContainer .dropdownIcon {
-  transform: scale(1.3) translateY(3px);
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer .versionText {
-  width: fit-content;
-  font-family: SquareFont, serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 46px;
-  flex: none;
   order: 1;
-  flex-grow: 1;
   text-align: center;
+  transition: all .3s ease-in-out;
+  width: auto
 }
 
-/****************************/
+.LaunchButton.Error, .LaunchButton.Error::before {
+  background: var(--bg-error)
+}
 
-.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown {
-  display: flex;
-  flex-direction: column;
+.LaunchButton.Launched .runContent .icon {
+  opacity: 0;
+  width: 0
+}
+
+.LaunchButton.Launched .runContent, .LaunchButton.Error .runContent, .LaunchButton.Loading .runContent, .LaunchButton.Loading .LoadingContent .ProgressBar {
+  flex: 2
+}
+
+.LaunchButton.Launched .versionSelectorLoader, .LaunchButton.Error .versionSelectorLoader, .LaunchButton.Loading .versionSelectorLoader {
+  flex: 0
+}
+
+.LaunchButton.Launched, .LaunchButton.Launched::before {
+  background: var(--bg-launched)
+}
+
+.LaunchButton.Loading {
+  background: var(--bg-loading);
+  gap: 5px;
+  height: fit-content
+}
+
+.LaunchButton.Loading .LoadingContent {
   align-items: center;
-  padding: 0 10px 0 10px;
+  display: flex;
+  gap: 5px;
+  height: 3vh;
+  justify-content: center;
+  width: 100%
+}
 
+.LaunchButton.Loading .runContent .icon, .LaunchButton.Error .runContent .icon {
+  transform: scale(1)
+}
+
+.LaunchButton.Loading .runContent .text, .LaunchButton.Error .runContent .text, .LaunchButton.Launched .runContent .text {
+  font-size: 40px
+}
+
+.LaunchButton.Loading::before {
+  background: var(--bg-loading)
+}
+
+.LaunchButton.offlineStyle {
+  background-color: gray
+}
+
+.LaunchButton.offlineStyle::before {
+  background: var(--bg-offline)
+}
+
+.LaunchButton::before {
+  background: var(--bg-normal);
+  border-radius: 20px;
+  content: '';
+  display: block;
+  filter: blur(20px);
+  height: 13vh;
+  opacity: .4;
   position: absolute;
-  width: 40%;
-  height: auto;
-  max-height: 30vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  left: 0;
-  top: calc(100% + 3px);
-  transition: all 0.3s ease-in-out;
-
-  background: var(--background-color);
-  border-radius: 15px;
-
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-  z-index: 1;
+  transform: scale(1.2);
+  transition: opacity 0.3s, all .5s;
+  width: 30vw;
+  z-index: -1
 }
 
-.LaunchButton[data-version-selector='true'][data-version-selector-opened='false'] .versionSelector .versionListDropdown {
-  max-height: 0;
-  padding: 0 10px;
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown .loaderContentVersion {
-  width: 100%;
-  height: auto;
-}
-
-.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown .version {
-  margin: 1vh 0 1vh 0;
-}
-
-.LaunchButton[data-version-selector='true'].offlineStyle .versionSelector .versionListDropdown .version.versionSelected {
-  background: gray;
+.LaunchButton:hover, .LaunchButton[data-version-selector='true'][data-version-selector-opened='true'], .LaunchButton.Loading, .LaunchButton.Error, .LaunchButton.Launched {
+  transform: scale(1.1)
 }
 
 .LaunchButton:not(.Loading) .LoadingContent {
   height: 0;
-  overflow: hidden;
+  overflow: hidden
 }
 
-.LaunchButton.Loading .LoadingContent {
-  width: 100%;
-  height: 3vh;
+.LaunchButton[data-version-selector='true'] .line {
+  border-radius: 0;
+  height: 12vh;
+  width: 4px !important
+}
+
+.LaunchButton[data-version-selector='true'] .runContent {
+  align-self: stretch;
+  gap: 6px;
+  order: 1;
+  transition: all .3s ease-in-out;
+  z-index: 0
+}
+
+.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon, .LaunchButton[data-version-selector='true'].Launched .runContent + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon, .LaunchButton[data-version-selector='true'].Error .runContent + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon, .LaunchButton[data-version-selector='true'].Loading .runContent + .versionSelectorLoader .versionSelector .dataContainer .dropdownIcon {
+  width: 0
+}
+
+.LaunchButton[data-version-selector='true'] .runContent:hover + .versionSelectorLoader .versionSelector .dataContainer, .LaunchButton.Loading .runContent + .versionSelectorLoader .versionSelector .dataContainer, .LaunchButton.Error .runContent + .versionSelectorLoader .versionSelector .dataContainer, .LaunchButton.Launched .runContent + .versionSelectorLoader .versionSelector .dataContainer {
+  gap: 0
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelector {
+  align-items: flex-start;
+  align-self: stretch;
   display: flex;
-  align-content: center;
-  justify-content: center;
-  gap: 5px;
-}
-.LaunchButton.Loading .LoadingContent .ProgressBar {
-  flex: 2;
+  flex: none;
+  flex-direction: column;
+  flex-grow: 0;
+  gap: 10px;
+  height: 100%;
+  isolation: isolate;
+  order: -1;
+  padding: 0;
+  transition: .3s ease-in-out;
+  width: 100%
 }
 
+.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer {
+  align-items: center;
+  align-self: stretch;
+  box-sizing: border-box;
+  display: flex;
+  flex: none;
+  flex-direction: row;
+  flex-grow: 0;
+  gap: 17px;
+  height: 100%;
+  justify-content: center;
+  order: 0;
+  padding: 10px;
+  transition: all .5s ease-in-out;
+  width: 100%
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer .dropdownIcon {
+  flex: none;
+  flex-grow: 0;
+  height: 100%;
+  order: 0;
+  transform: scale(1.3);
+  transition: all .3s ease-in-out;
+  width: 2vw
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer .versionText {
+  flex: none;
+  flex-grow: 1;
+  font: 400 30px/46px SquareFont, serif;
+  order: 1;
+  text-align: center;
+  width: fit-content
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelector .dataContainer:hover .dropdownIcon, .LaunchButton[data-version-selector='true'][data-version-selector-opened='true'] .versionSelector .dataContainer .dropdownIcon {
+  transform: scale(1.3) translateY(3px)
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown {
+  align-items: center;
+  background: var(--background-color);
+  border-radius: 15px;
+  display: flex;
+  flex: none;
+  flex-direction: column;
+  flex-grow: 0;
+  height: auto;
+  left: 0;
+  max-height: 30vh;
+  order: 1;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding: 0 10px;
+  position: absolute;
+  top: calc(100% + 3px);
+  transition: all .3s ease-in-out;
+  width: 40%;
+  z-index: 1
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown .loaderContentVersion {
+  height: auto;
+  width: 100%
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelector .versionListDropdown .version {
+  margin: 1vh 0
+}
+
+.LaunchButton[data-version-selector='true'] .versionSelectorLoader {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  padding: 0;
+  transition: .3s ease-in-out;
+  width: 40%
+}
+
+.LaunchButton[data-version-selector='true'].offlineStyle .versionSelector .versionListDropdown .version.versionSelected {
+  background: gray
+}
+
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error):not(.Launched) .Content {
+  gap: 4px
+}
+
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error):not(.Launched) .runContent .icon {
+  transform: scale(1.4)
+}
+
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error):not(.Launched) .runContent .text {
+  font-size: 40px;
+  line-height: 52px
+}
+
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error):not(.Launched) .runContent:hover .icon {
+  transform: scale(2)
+}
+
+.LaunchButton[data-version-selector='true']:not(.Loading):not(.Error):not(.Launched) .runContent:hover .text {
+  font-size: 45px
+}
+
+.LaunchButton[data-version-selector='true'][data-version-selector-opened='false'] .versionSelector .versionListDropdown {
+  max-height: 0;
+  padding: 0 10px
+}
