--- a/src/renderer/components/main/TabView/TabViewStyle.module.css
+++ b/src/renderer/components/main/TabView/TabViewStyle.module.css
@@ -23,6 +23,7 @@
 }
 
 
+
 .TabView[data-orientation='Horizontal'] .NavBar[data-collapsed='true'] {
   width: 8.5vw;
 }
@@ -50,6 +51,7 @@
   --ml: 0;
   position: relative;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
   box-sizing: content-box;
@@ -123,7 +125,7 @@
   width: fit-content;
   height: 8vh;
   padding: 0 3vw 0 3vw;
-  border-radius: 10px 10px 0 0;
+  border-radius: 7px;
 }
 
 .TabView[data-orientation='Horizontal'] .NavBar[data-collapsed='true'] .Tab {
@@ -175,6 +177,7 @@
 /***************************/
 .TabView .Viewer {
   width: 100%;
+  overflow: hidden;
 }
 
 .TabView[data-orientation="Horizontal"] .Viewer {
