--- a/src/renderer/components/views/SettingsViews/css/ProfileViewStyle.module.css
+++ b/src/renderer/components/views/SettingsViews/css/ProfileViewStyle.module.css
@@ -3,6 +3,9 @@
   min-height: 40%;
   max-height: 90%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1vh;
 }
 
 .ProfileList .logoutAllButton {
