--- a/src/renderer/components/public/css/publicStyle.module.css
+++ b/src/renderer/components/public/css/publicStyle.module.css
@@ -101,6 +101,7 @@
 
 .Version .versionIcon {
   height: 50%;
+  width: fit-content;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -115,6 +116,7 @@
 
 /************************************/
 .CallbackMessage .arrow {
+
   position: absolute;
   top: 0.5vh;
   right: 2vw;
@@ -123,6 +125,7 @@
 }
 
 .CallbackMessage .message {
+  white-space: nowrap;
   font-size: 4.5vh;
   font-weight: 400;
 }
@@ -130,6 +133,7 @@
 .CallbackMessage .description {
   font-size: 3.5vh;
   font-family: Octosquares;
+
 }
 
 .CallbackMessage .resolutions {
@@ -140,3 +144,8 @@
 
 
 /*****************************************/
+.IconDefault {
+  width: 100%;
+  height: 100%;
+}
+
