[Review pt.2] Reviewed Startup

--- a/src/renderer/components/main/css/mainComponentsStyle.module.css
+++ b/src/renderer/components/main/css/mainComponentsStyle.module.css
@@ -34,11 +34,13 @@
 .mainMenuBar .data .frameData .title {
   font-weight: 300;
   font-size: 3vh;
+  white-space: nowrap;
 }
 
 .mainMenuBar .data .frameData .version {
   font-weight: 500;
   font-size: 2.5vh;
+  white-space: nowrap;
 }
 
 .mainMenuBar .frameActionGroup {
