--- a/src/renderer/components/main/css/mainComponentsStyle.module.css
+++ b/src/renderer/components/main/css/mainComponentsStyle.module.css
@@ -33,14 +33,18 @@
 
 .mainMenuBar .data .frameData .title {
   font-weight: 300;
-  font-size: 3vh;
+  font-size: 4vh;
   white-space: nowrap;
+  font-family: Terabite;
 }
 
 .mainMenuBar .data .frameData .version {
-  font-weight: 500;
-  font-size: 2.5vh;
+  font-weight: 100;
+  font-size: 2vh;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
+  margin-top: 0.4vh;
 }
 
 .mainMenuBar .frameActionGroup {
