--- a/src/renderer/components/public/css/publicStyle.module.css
+++ b/src/renderer/components/public/css/publicStyle.module.css
@@ -18,19 +18,6 @@
 }
 
 /****************************/
-.VerticalLine {
-  height: 90%;
-  background-color: var(--text-color);
-  width: 2px;
-  border-radius: 25px;
-}
-
-.HorizontalLine {
-  width: 90%;
-  background-color: var(--text-color);
-  height: 2px;
-  border-radius: 25px;
-}
 
 /****************************/
 .LoadedContent {
@@ -44,67 +31,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-}
-
-/*******************************/
-.Version {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0 15px;
-  box-sizing: border-box;
-  gap: 13px;
-
-  background: var(--third-background-color);
-  border-radius: 15px;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
-
-  width: 100%;
-  height: 7vh;
-
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
-}
-
-.Version.versionInstalled:hover:not(.versionSelected) {
-  background-color: var(--hover-background-color);
-}
-
-.Version.versionToDownload:hover:not(.versionSelected) {
-  background-color: var(--hover-background-color);
-}
-
-.Version.versionSelected {
-  background-color: var(--valid);
-}
-
-.Version .versionText {
-  font-family: 'SquareFont', serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 4vh;
-  line-height: 46px;
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-
-
-  flex: none;
-  order: 1;
-  flex-grow: 1;
-}
-
-.Version .versionIcon {
-  height: 50%;
-  width: fit-content;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
 }
 
 /************************************/
@@ -132,13 +58,13 @@
 
 .CallbackMessage .description {
   font-size: 3.5vh;
-  font-family: Octosquares;
+  font-family: Octosquares, system-ui;
 
 }
 
 .CallbackMessage .resolutions {
   font-size: 3.5vh;
-  font-family: Octosquares;
+  font-family: Octosquares, system-ui;
 }
 
 
@@ -156,7 +82,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 2vw;
+  gap: 1vw;
   padding: 0.5vh 2vw;
   border-radius: 10px;
 }
