--- a/src/renderer/components/main/Auth/css/AuthModuleStyle.module.css
+++ b/src/renderer/components/main/Auth/css/AuthModuleStyle.module.css
@@ -1,5 +1,6 @@
 .AuthModule {
-  width: 25vw;
+  max-width: 40vw;
+  width: fit-content;
   height: 10vh;
   position: absolute;
   right: 0;
@@ -11,17 +12,12 @@
 }
 
 .AuthModule .loadedContent {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: fit-content;
   position: relative;
   /*background-color: red;*/
 }
 
 .AuthModule .loadedContent .selectedContent {
-  width: 100%;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -31,11 +27,13 @@
 
 .AuthModule .loadedContent .selectedContent .user {
   background-color: transparent;
+  max-width: 33vw;
 }
 
 .AuthModule .loadedContent .selectedContent .button {
   background-color: transparent;
   transition: all 0.2s ease-in-out;
+  padding: 10px;
 }
 
 .AuthModule .loadedContent .selectedContent .button:hover {
@@ -156,6 +154,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 30vw;
 }
 
 .UserCard .ActionContainer {
