--- a/src/renderer/components/main/TabView/TabViewStyle.module.css
+++ b/src/renderer/components/main/TabView/TabViewStyle.module.css
@@ -179,6 +179,7 @@
 
 /***************************/
 .TabView .Viewer {
+  height: 100%;
   width: 100%;
   overflow: hidden;
   box-sizing: border-box;
