--- a/src/renderer/components/public/css/publicStyle.module.css
+++ b/src/renderer/components/public/css/publicStyle.module.css
@@ -70,8 +70,8 @@
 
 /*****************************************/
 .IconDefault {
-  width: 100%;
-  height: 100%;
+  width: 4vw;
+  height: 4vw;
 }
 
 /*****************************************/
@@ -153,4 +153,10 @@
   font-family: unset;
   font-size: 2vh;
   padding: 0 1vw 0 0;
+}
+/*****************************/
+.OutsideAlerter {
+  width: auto;
+  height: auto;
+  box-sizing: content-box;
 }
