--- a/src/renderer/Theme.module.css
+++ b/src/renderer/Theme.module.css
@@ -1,8 +1,9 @@
 /*noinspection CssUnusedSymbol*/
 .Theme-Dark {
   --base-background-color: #0a0a0a;
-  --background-color: #1a1919;
-  --second-background-color: #302f2f;
+  --background-color: #1a1a1a;
+  --second-background-color: #262525;
+  --primary-border: #414141;
   --third-background-color: #4b4949;
   --hover-background-color: #5a5858;
   --bush-background-color: #252d27;
