--- a/src/renderer/components/main/css/mainComponentsStyle.module.css
+++ b/src/renderer/components/main/css/mainComponentsStyle.module.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   z-index: 100;
   -webkit-app-region: drag;
-  background-color: var(--background-color);
+  background-color: var(--base-background-color);
 }
 
 .mainMenuBar p {
